--- a/Makefile.am
+++ b/Makefile.am
@@ -123,6 +123,7 @@ AM_CFLAGS = \
     $(OPTIONAL_CUPS_CFLAGS) \
     $(OPTIONAL_XENSTAT_CFLAGS) \
     $(OPTIONAL_BPF_CFLAGS) \
+    $(OPTIONAL_PROTOBUF_CFLAGS) \
     $(NULL)
 
 sbin_PROGRAMS =
@@ -202,6 +203,11 @@ endif
 APPS_PLUGIN_FILES = \
     collectors/apps.plugin/apps_plugin.c \
     $(LIBNETDATA_FILES) \
+    $(NULL)
+
+PROFILE_PLUGIN_FILES = \
+    collectors/profile.plugin/plugin_profile.cc \
+    collectors/profile.plugin/plugin_profile.h \
     $(NULL)
 
 CHECKS_PLUGIN_FILES = \
@@ -551,6 +557,7 @@ if ENABLE_DBENGINE
         database/engine/rrdenginelib.h \
         database/engine/rrdengineapi.c \
         database/engine/rrdengineapi.h \
+        database/engine/rrdenginerepl.c \
         database/engine/pagecache.c \
         database/engine/pagecache.h \
         database/engine/rrdenglocking.c \
@@ -633,7 +640,64 @@ STREAMING_PLUGIN_FILES = \
     streaming/sender.c \
     streaming/receiver.c \
     streaming/rrdpush.h \
+    streaming/protocol/setup.h \
+    streaming/protocol/setup.c \
+    streaming/protocol/message.cc \
+    streaming/protocol/message.h \
+    streaming/protocol/handshake.h \
+    streaming/protocol/handshake.cc \
+    streaming/replication/replication.h \
+    streaming/replication/replication-dummy.c \
     $(NULL)
+
+REPLICATION_FILES = \
+    streaming/replication/replication.h \
+    streaming/replication/replication-dummy.c \
+    $(NULL)
+
+if ENABLE_REPLICATION
+
+streaming/protocol/proto/command.pb.cc \
+streaming/protocol/proto/command.pb.h: streaming/protocol/proto/command.proto
+	$(PROTOC) --proto_path=$(srcdir) --cpp_out=$(builddir) $^
+
+dist_noinst_DATA += streaming/protocol/proto/command.proto
+
+BUILT_SOURCES += \
+    streaming/protocol/proto/command.pb.cc \
+    streaming/protocol/proto/command.pb.h \
+    $(NULL)
+
+nodist_netdata_SOURCES += \
+    streaming/protocol/proto/command.pb.cc \
+    streaming/protocol/proto/command.pb.h \
+    $(NULL)
+
+CLEANFILES += \
+    streaming/protocol/proto/command.pb.cc \
+    streaming/protocol/proto/command.pb.h \
+    $(NULL)
+
+REPLICATION_FILES += \
+    streaming/replication/Base64.cc \
+    streaming/replication/Base64.h \
+    streaming/replication/Config.cc \
+    streaming/replication/Config.h \
+    streaming/replication/GapData.cc \
+    streaming/replication/GapData.h \
+    streaming/replication/Logger.h \
+    streaming/replication/TimeRange.cc \
+    streaming/replication/TimeRange.h \
+    streaming/replication/Utils.h \
+    streaming/replication/replication.cc \
+    streaming/replication/replication-private.h \
+    $(NULL)
+
+STREAMING_PLUGIN_FILES += \
+    $(REPLICATION_FILES) \
+    $(NULL)
+
+endif # ENABLE_REPLICATION
 
 REGISTRY_PLUGIN_FILES = \
     registry/registry.c \
@@ -951,6 +1015,7 @@ NETDATA_FILES = \
     $(API_PLUGIN_FILES) \
     $(EXPORTING_ENGINE_FILES) \
     $(CHECKS_PLUGIN_FILES) \
+    $(PROFILE_PLUGIN_FILES) \
     $(HEALTH_PLUGIN_FILES) \
     $(ML_FILES) \
     $(ML_TESTS_FILES) \
@@ -1006,6 +1071,7 @@ NETDATA_COMMON_LIBS = \
     $(OPTIONAL_SSL_LIBS) \
     $(OPTIONAL_JSONC_LIBS) \
     $(OPTIONAL_ATOMIC_LIBS) \
+    $(OPTIONAL_PROTOBUF_LIBS) \
     $(NULL)
 
 if LINK_STATIC_JSONC
