Properly handle service dependencies in OpenRC init script.
This removes the `NETDATA_START_AFTER_SERVICES` variable from our OpenRC
script. This variable made the script somewhat harder to read, and did
not actually provide any additional functionality (users can simply
define appropriate `rc_after` values in `/etc/conf.d/netdata` to achieve
exactly the same net effect)..

--- a/system/netdata-openrc.in
+++ b/system/netdata-openrc.in
@@ -15,10 +15,6 @@
 # to exit.
 : "${NETDATA_FORCE_EXIT:=0}"
 
-# Netdata will use these services, only if they
-# are enabled to start.
-: "${NETDATA_START_AFTER_SERVICES:=apache2 squid nginx mysql named opensips upsd hostapd postfix lm_sensors}"
-
 extra_started_commands="reload rotate save"
 pidfile="@localstatedir_POST@/run/netdata/netdata.pid"
 command="@sbindir_POST@/netdata"
@@ -34,7 +30,7 @@ fi
 depend() {
     use logger
     need net
-    after ${NETDATA_START_AFTER_SERVICES}
+    after apache2 squid nginx mysql named opensips upsd hostapd postfix lm_sensors
 }
 
 start_pre() {
