Add a script to handle installing Netdata as a system service.
This uses the files installed as a result of the previous commit, and
provides more robust detection and system handling than the existing
code used for this purpose.

A subsequent commit will convert the various installation mechanisms to
use this script instead of their own internal code for this purpose.

--- a/system/Makefile.am
+++ b/system/Makefile.am
@@ -32,6 +32,11 @@ install-exec-local:
 	$(INSTALL) -d $(DESTDIR)$(configdir)
 	$(INSTALL) -d $(DESTDIR)$(libsysdir)
 
+libexecnetdatadir=$(libexecdir)/netdata
+nodist_libexecnetdata_SCRIPTS = \
+    install-service.sh \
+    $(NULL)
+
 nodist_libsys_DATA = \
     netdata-openrc \
     netdata.logrotate \
@@ -51,6 +56,7 @@ dist_libsys_DATA = \
 
 dist_noinst_DATA = \
     edit-config.in \
+    install-service.sh.in \
     netdata-openrc.in \
     netdata.logrotate.in \
     netdata.service.in \
