--- a/system/install-service.sh.in
+++ b/system/install-service.sh.in
@@ -89,7 +89,7 @@ install_generic_service() {
     ENABLE="enable"
   fi
 
-  if ! install -C -S -p -m 0755 -o 0 -g 0 "${SVC_SOURCE}/netdata-${svc_type}" /etc/init.d/netdata; then
+  if ! install -p -m 0755 -o 0 -g 0 "${SVC_SOURCE}/netdata-${svc_type}" /etc/init.d/netdata; then
     error "Failed to install service file."
     exit 4
   fi
@@ -226,7 +226,7 @@ install_systemd_service() {
   fi
 
   info "Installing systemd service..."
-  if ! install -C -S -p -m 0644 -o 0 -g 0 "${SRCFILE}" "$(get_systemd_service_dir)/netdata.service"; then
+  if ! install -p -m 0644 -o 0 -g 0 "${SRCFILE}" "$(get_systemd_service_dir)/netdata.service"; then
     error "Failed to install systemd service file."
     exit 4
   fi
