--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -814,6 +814,8 @@ set(API_PLUGIN_FILES
         web/api/queries/sum/sum.h
         web/api/queries/median/median.c
         web/api/queries/median/median.h
+        web/api/queries/percentile/percentile.c
+        web/api/queries/percentile/percentile.h
         web/api/queries/stddev/stddev.c
         web/api/queries/stddev/stddev.h
         web/api/queries/ses/ses.c
