--- a/configure.ac
+++ b/configure.ac
@@ -1748,6 +1748,7 @@ AC_CONFIG_FILES([
     web/api/queries/max/Makefile
     web/api/queries/median/Makefile
     web/api/queries/min/Makefile
+    web/api/queries/percentile/Makefile
     web/api/queries/ses/Makefile
     web/api/queries/stddev/Makefile
     web/api/queries/sum/Makefile
