--- a/configure.ac
+++ b/configure.ac
@@ -1752,6 +1752,7 @@ AC_CONFIG_FILES([
     web/api/queries/ses/Makefile
     web/api/queries/stddev/Makefile
     web/api/queries/sum/Makefile
+    web/api/queries/trimmed_mean/Makefile
     web/api/health/Makefile
     web/gui/Makefile
     web/gui/dashboard/Makefile
