--- a/Makefile.am
+++ b/Makefile.am
@@ -589,6 +589,8 @@ API_PLUGIN_FILES = \
     web/api/queries/min/min.h \
     web/api/queries/percentile/percentile.c \
     web/api/queries/percentile/percentile.h \
+    web/api/queries/trimmed_mean/trimmed_mean.c \
+    web/api/queries/trimmed_mean/trimmed_mean.h \
     web/api/queries/query.c \
     web/api/queries/query.h \
     web/api/queries/rrdr.c \
