--- a/collectors/python.d.plugin/python.d.plugin.in
+++ b/collectors/python.d.plugin/python.d.plugin.in
@@ -496,9 +496,16 @@ class FileLockRegistry:
         self.path = path
         self.locks = dict()
 
-    def register(self, name):
+    @staticmethod
+    def rename(name):
+        # go version name is 'docker'
         if name.startswith("dockerd"):
             name = "docker" + name[7:]
+        return name
+
+
+    def register(self, name):
+        name = self.rename(name)
         if name in self.locks:
             return
         file = os.path.join(self.path, '{0}.collector.lock'.format(name))
@@ -507,8 +514,7 @@ class FileLockRegistry:
         self.locks[name] = lock
 
     def unregister(self, name):
-        if name.startswith("dockerd"):
-            name = "docker" + name[7:]
+        name = self.rename(name)
         if name not in self.locks:
             return
         lock = self.locks[name]
