fixes and improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1684,12 +1684,18 @@ ENDIF()
 
 set(NETDATA_USER "netdata" CACHE STRING "use this user to drop privileges")
 
+if(MAC_OS)
+    set(ENABLE_APPS_PLUGIN False)
+else()
+    set(ENABLE_APPS_PLUGIN True)
+endif()
+
 check_include_file(time.h HAVE_TIME_H)
 check_include_file(unistd.h HAVE_UNISTD_H)
 if (HAVE_TIME_H)
     include(CheckStructHasMember)
     check_struct_has_member("struct timespec" tv_sec "time.h" HAVE_STRUCT_TIMESPEC)
-endif (HAVE_TIME_H)
+endif ()
 
 check_include_file(sys/statfs.h HAVE_SYS_STATFS_H)
 check_include_file(sys/statvfs.h HAVE_SYS_STATVFS_H)
@@ -1697,8 +1703,26 @@ check_include_file(inttypes.h HAVE_INTTYPES_H)
 check_include_file(stdint.h HAVE_STDINT_H)
 
 include(CheckSymbolExists)
-check_symbol_exists(major "sys/mkdev.h" MAJOR_IN_MKDEV)
-check_symbol_exists(major "sys/sysmacros.h" MAJOR_IN_SYSMACROS)
+check_include_file(sys/mkdev.h HAVE_SYS_MKDEV_H)
+if (HAVE_SYS_MKDEV_H)
+    check_symbol_exists(major "sys/mkdev.h" MAJOR_IN_MKDEV)
+endif()
+check_include_file(sys/sysmacros.h HAVE_SYS_SYSMACROS_H)
+if (HAVE_SYS_SYSMACROS_H)
+    check_symbol_exists(major "sys/sysmacros.h" MAJOR_IN_SYSMACROS)
+endif()
+
+if (CRYPTO_FOUND)
+    include(CheckLibraryExists)
+    set(HAVE_CRYPTO True)
+    FIND_LIBRARY(CRYPTO_LIBRARY_LOCATION NAMES crypto)
+    message(STATUS "foo include dir: ${CRYPTO_LIBRARY_LOCATION}")
+    check_library_exists(crypto X509_VERIFY_PARAM_set1_host ${CRYPTO_LIBRARY_LOCATION} HAVE_X509_VERIFY_PARAM_set1_host)
+    if (HAVE_X509_VERIFY_PARAM_set1_host)
+        set(HAVE_X509_VERIFY_PARAM_set1_host True)
+    endif()
+    message(STATUS "foo include dir2: ${HAVE_X509_VERIFY_PARAM_set1_host}")
+endif()
 
 include(CheckCSourceCompiles)
 check_c_source_compiles("
