--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -46,6 +46,7 @@
 
 #define ENABLE_ACLK
 #define ENABLE_DBENGINE
+#define ENABLE_COMPRESSION // pkg_check_modules(LIBLZ4 REQUIRED liblz4)
 #cmakedefine ENABLE_APPS_PLUGIN
 
 
