--- a/health/notifications/alarm-notify.sh.in
+++ b/health/notifications/alarm-notify.sh.in
@@ -1339,10 +1339,11 @@ send_telegram() {
 
   if [ "${SEND_TELEGRAM}" = "YES" ] && [ -n "${bottoken}" ] && [ -n "${chatids}" ] && [ -n "${message}" ]; then
     for chatid in ${chatids}; do
-      successful=0
-      attempt_counter=0
+      notify_telegram=1
+      notify_retries=0
+      notify_retries_limit=${TELEGRAM_RETRIES_ON_LIMIT:-0}
 
-      while [ ${successful} -eq 0 ] && [ ${attempt_counter} -lt 60 ]; do
+      while [ ${notify_telegram} -eq 1 ]; do
         # https://core.telegram.org/bots/api#sendmessage
         httpcode=$(docurl ${disableNotification} \
           --data-urlencode "parse_mode=HTML" \
@@ -1350,7 +1351,7 @@ send_telegram() {
           --data-urlencode "text=${emoji} ${message}" \
           "https://api.telegram.org/bot${bottoken}/sendMessage?chat_id=${chatid}")
 
-        successful=1
+        notify_telegram=0
         attempt_counter=$((attempt_counter + 1))
 
         if [ "${httpcode}" = "200" ]; then
@@ -1359,9 +1360,14 @@ send_telegram() {
         elif [ "${httpcode}" = "401" ]; then
           error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': Wrong bot token."
         elif [ "${httpcode}" = "429" ]; then
-          error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': rate limit exceeded, retrying after 1s."
-          successful=0
-          sleep 1
+          if [ "$notify_retries" -lt "$notify_retries_limit" ]; then
+            error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': rate limit exceeded, retrying after 1s."
+            notify_retries=$((notify_retries + 1))
+            notify_telegram=1
+            sleep 1
+          else
+            error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': rate limit exceeded."
+          fi
         else
           error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}' with HTTP response status code ${httpcode}."
         fi
