--- a/health/notifications/alarm-notify.sh.in
+++ b/health/notifications/alarm-notify.sh.in
@@ -1340,8 +1340,7 @@ send_telegram() {
   if [ "${SEND_TELEGRAM}" = "YES" ] && [ -n "${bottoken}" ] && [ -n "${chatids}" ] && [ -n "${message}" ]; then
     for chatid in ${chatids}; do
       notify_telegram=1
-      notify_retries=0
-      notify_retries_limit=${TELEGRAM_RETRIES_ON_LIMIT:-0}
+      notify_retries=${TELEGRAM_RETRIES_ON_LIMIT:-0}
 
       while [ ${notify_telegram} -eq 1 ]; do
         # https://core.telegram.org/bots/api#sendmessage
@@ -1359,9 +1358,9 @@ send_telegram() {
         elif [ "${httpcode}" = "401" ]; then
           error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': Wrong bot token."
         elif [ "${httpcode}" = "429" ]; then
-          if [ "$notify_retries" -lt "$notify_retries_limit" ]; then
+          if [ "$notify_retries" -gt 0 ]; then
             error "failed to send telegram notification for: ${host} ${chart}.${name} is ${status} to '${chatid}': rate limit exceeded, retrying after 1s."
-            notify_retries=$((notify_retries + 1))
+            notify_retries=$((notify_retries - 1))
             notify_telegram=1
             sleep 1
           else
