--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -53,7 +53,7 @@
     cachestat = no
     dcstat = no
     disk = no
-    fd = no
+    fd = yes
     filesystem = no
     hardirq = yes
     mdflush = no
@@ -65,5 +65,5 @@
     softirq = yes
     sync = yes
     swap = no
-    vfs = no
+    vfs = yes
     network connections = no
