--- a/health/health.d/mysql.conf
+++ b/health/health.d/mysql.conf
@@ -114,7 +114,7 @@ component: MySQL
     class: Utilization
      type: Database
 component: MySQL
-   lookup: max -2m absolute
+   lookup: max -2m at -1m unaligned
     units: nodes
     every: 10s
      info: maximum galera cluster size in the last 2 minutes
