--- a/health/health.d/mysql.conf
+++ b/health/health.d/mysql.conf
@@ -117,7 +117,7 @@ component: MySQL
    lookup: max -2m at -1m unaligned
     units: nodes
     every: 10s
-     info: maximum galera cluster size in the last 2 minutes
+     info: maximum galera cluster size in the last 2 minutes starting one minute ago
        to: dba
 
  template: mysql_galera_cluster_size
