--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -159,6 +159,10 @@ logs: ulogd* syslog* rsyslog* logrotate systemd-journald rotatelogs
 nms: snmpd vnstatd smokeping zabbix* monit munin* mon openhpid watchdog tailon nrpe
 splunk: splunkd
 azure: mdsd *waagent* *omiserver* *omiagent* hv_kvp_daemon hv_vss_daemon *auoms* *omsagent*
+datadog: *datadog*
+edgedelta: edgedelta
+newrelic: newrelic*
+google-agent: *google_guest_agent* *google_osconfig_agent*
 
 # -----------------------------------------------------------------------------
 # storage, file systems and file servers
