--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -163,6 +163,7 @@ datadog: *datadog*
 edgedelta: edgedelta
 newrelic: newrelic*
 google-agent: *google_guest_agent* *google_osconfig_agent*
+nvidia-smi: nvidia-smi
 
 # -----------------------------------------------------------------------------
 # storage, file systems and file servers
