--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -164,6 +164,7 @@ edgedelta: edgedelta
 newrelic: newrelic*
 google-agent: *google_guest_agent* *google_osconfig_agent*
 nvidia-smi: nvidia-smi
+htop: htop
 
 # -----------------------------------------------------------------------------
 # storage, file systems and file servers
