--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -20,7 +20,7 @@
 
 # update_every sets the default data collection frequency.
 # If unset, the python.d.plugin default is used.
-update_every: 15
+update_every: 5
 
 # priority controls the order of charts at the netdata dashboard.
 # Lower numbers move the charts towards the top of the page.
@@ -68,15 +68,12 @@ update_every: 15
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
-four_lines:
-    name: "Four Lines"      # the JOB's name as it will appear on the dashboard
-    update_every: 1         # the JOB's data collection frequency
+bigquery:
+    name: "BigQuery"      # the JOB's name as it will appear on the dashboard
+    update_every: 5         # the JOB's data collection frequency
     priority: 60000         # the JOB's order on the dashboard
     penalty: yes            # the JOB's penalty
     autodetection_retry: 0  # the JOB's re-check interval in seconds
-    num_lines: 4            # the number of lines to create
-    lower: 0                # the lower bound of numbers to randomly sample from
-    upper: 100              # the upper bound of numbers to randomly sample from
 
 # if you wanted to make another job to run in addition to the one above then 
 # you would just uncomment the job configuration below.
