--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -69,13 +69,6 @@ update_every: 5
 # AUTO-DETECTION JOBS
 
 bigquery:
-    name: "BigQuery"      # the JOB's name as it will appear on the dashboard
-    update_every: 5         # the JOB's data collection frequency
-
-# if you wanted to make another job to run in addition to the one above then 
-# you would just uncomment the job configuration below.
-# two_lines:
-#     name: "Two Lines"     # the JOB's name as it will appear on the dashboard
-#     num_lines: 2          # the number of lines to create
-#     lower: 50             # the lower bound of numbers to randomly sample from
-#     upper: 75             # the upper bound of numbers to randomly sample from
+    name: "BigQuery"
+    update_every: 5
+    
