--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -68,6 +68,34 @@ update_every: 5
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
-bigquery:
-    name: "BigQuery"
+bigquery_example_a:
+    name: "bigquery_example_b"
     update_every: 5
+    credentials: "/tmp/key.json"
+    chart_configs:
+      - chart_name: "random_data_line"
+        sql: "select rand()*100 as random_positive, rand()*100*-1 random_negative"
+        project_id: "netdata-analytics-bi"
+        chart_type: "line"
+        chart_units: "n"
+      - chart_name: "random_data_stacked"
+        sql: "select rand()*100 as random_1, rand()*100 as random_2"
+        project_id: "netdata-analytics-bi"
+        chart_type: "stacked"
+        chart_units: "n"
+
+bigquery_example_b:
+    name: "bigquery_example_b"
+    update_every: 5
+    credentials: "/tmp/key.json"
+    chart_configs:
+      - chart_name: "random_data_line"
+        sql: "select rand()*100 as random_positive, rand()*100*-1 random_negative"
+        project_id: "netdata-analytics-bi"
+        chart_type: "line"
+        chart_units: "n"
+      - chart_name: "random_data_stacked"
+        sql: "select rand()*100 as random_1, rand()*100 as random_2"
+        project_id: "netdata-analytics-bi"
+        chart_type: "stacked"
+        chart_units: "n"
