--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -69,7 +69,7 @@ update_every: 5
 # AUTO-DETECTION JOBS
 
 bigquery_example_a:
-    name: "bigquery_example_b"
+    name: "bigquery_example_a"
     update_every: 5
     credentials: "/tmp/key.json"
     chart_configs:
