--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -68,7 +68,7 @@ update_every: 5
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
-bigquery_example_a:
+example_a:
     name: "bigquery_example_a"
     update_every: 5
     credentials: "/tmp/key.json"
@@ -84,7 +84,7 @@ bigquery_example_a:
         chart_type: "stacked"
         chart_units: "n"
 
-bigquery_example_b:
+example_b:
     name: "bigquery_example_b"
     update_every: 5
     credentials: "/tmp/key.json"
