--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -71,7 +71,7 @@ update_every: 5
 example_a:
     name: "example_a"
     update_every: 5
-    credentials: "/tmp/key.json"
+    credentials: "/path/to/your/key.json"
     chart_configs:
       - chart_name: "random_data_line"
         chart_title: "some random data"
@@ -79,7 +79,7 @@ example_a:
         chart_context: "bigquery"
         chart_type: "line"
         chart_units: "n"
-        project_id: "netdata-analytics-bi"
+        project_id: "your-gcp-project-id"
         sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
       - chart_name: "random_data_stacked"
         chart_title: "some random data stacked"
@@ -87,13 +87,13 @@ example_a:
         chart_context: "bigquery"
         chart_type: "stacked"
         chart_units: "n"
-        project_id: "netdata-analytics-bi"
+        project_id: "your-gcp-project-id"
         sql: "select rand()*100 as random_1, rand()*100 as random_2"
 
 example_b:
     name: "example_b"
     update_every: 5
-    credentials: "/tmp/key.json"
+    credentials: "/path/to/your/key.json"
     chart_configs:
       - chart_name: "random_data_line"
         chart_title: "some random data"
@@ -101,7 +101,7 @@ example_b:
         chart_context: "bigquery"
         chart_type: "line"
         chart_units: "n"
-        project_id: "netdata-analytics-bi"
+        project_id: "your-gcp-project-id"
         sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
       - chart_name: "random_data_stacked"
         chart_title: "some random data stacked"
@@ -109,5 +109,5 @@ example_b:
         chart_context: "bigquery"
         chart_type: "stacked"
         chart_units: "n"
-        project_id: "netdata-analytics-bi"
+        project_id: "your-gcp-project-id"
         sql: "select rand()*100 as random_1, rand()*100 as random_2"
