--- a/collectors/python.d.plugin/bigquery/bigquery.conf
+++ b/collectors/python.d.plugin/bigquery/bigquery.conf
@@ -68,8 +68,8 @@ update_every: 5
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
-example_a:
-    name: "example_a"
+example:
+    name: "example"
     update_every: 5
     credentials: "/path/to/your/key.json"
     chart_configs:
@@ -90,24 +90,25 @@ example_a:
         project_id: "your-gcp-project-id"
         sql: "select rand()*100 as random_1, rand()*100 as random_2"
 
-example_b:
-    name: "example_b"
-    update_every: 5
-    credentials: "/path/to/your/key.json"
-    chart_configs:
-      - chart_name: "random_data_line"
-        chart_title: "some random data"
-        chart_family: "bigquery"
-        chart_context: "bigquery"
-        chart_type: "line"
-        chart_units: "n"
-        project_id: "your-gcp-project-id"
-        sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
-      - chart_name: "random_data_stacked"
-        chart_title: "some random data stacked"
-        chart_family: "bigquery"
-        chart_context: "bigquery"
-        chart_type: "stacked"
-        chart_units: "n"
-        project_id: "your-gcp-project-id"
-        sql: "select rand()*100 as random_1, rand()*100 as random_2"
+# Below is an example of a second python bigquery job to execute one or more sql queries and save results as charts in Netdata
+# example_b:
+#     name: "example_b"
+#     update_every: 5
+#     credentials: "/path/to/your/key.json"
+#     chart_configs:
+#       - chart_name: "random_data_line"
+#         chart_title: "some random data"
+#         chart_family: "bigquery"
+#         chart_context: "bigquery"
+#         chart_type: "line"
+#         chart_units: "n"
+#         project_id: "your-gcp-project-id"
+#         sql: "select rand()*100 as random_positive, rand()*100*-1 as random_negative"
+#       - chart_name: "random_data_stacked"
+#         chart_title: "some random data stacked"
+#         chart_family: "bigquery"
+#         chart_context: "bigquery"
+#         chart_type: "stacked"
+#         chart_units: "n"
+#         project_id: "your-gcp-project-id"
+#         sql: "select rand()*100 as random_1, rand()*100 as random_2"  
