--- a/collectors/python.d.plugin/python.d.conf
+++ b/collectors/python.d.plugin/python.d.conf
@@ -26,15 +26,15 @@ gc_run: yes
 gc_interval: 300
 
 # adaptec_raid: yes
-# alarms: yes
+alarms: no
 # am2320: yes
-# anomalies: no
+anomalies: no
 # beanstalk: yes
 # bind_rndc: yes
-# bigquery: no
+bigquery: no
 # boinc: yes
 # ceph: yes
-# changefinder: no
+changefinder: no
 # dockerd: yes
 # dovecot: yes
 
@@ -82,4 +82,4 @@ logind: no
 # uwsgi: yes
 # varnish: yes
 # w1sensor: yes
-# zscores: no
+zscores: no
