Move connmand to network management tools, and add wicked.
Connmand is definitely a network management tool, and we were missing
SUSE’s home-grown tooling (wicked) as well.

--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -131,7 +131,7 @@ vpn: openvpn pptp* cjdroute gvpe tincd wireguard tailscaled
 wifi: hostapd wpa_supplicant
 routing: ospfd* ospf6d* bgpd bfdd fabricd isisd eigrpd sharpd staticd ripd ripngd pimd pbrd nhrpd ldpd zebra vrrpd vtysh bird*
 modem: ModemManager
-netmanager: NetworkManager nm* systemd-networkd networkctl netplan
+netmanager: NetworkManager nm* systemd-networkd networkctl netplan connmand wicked*
 tor: tor
 
 # -----------------------------------------------------------------------------
@@ -316,7 +316,7 @@ kswapd: kswapd
 zswap: zswap
 kcompactd: kcompactd
 
-system: systemd-* udisks* udevd* *udevd connmand ipv6_addrconf dbus-* rtkit*
+system: systemd-* udisks* udevd* *udevd ipv6_addrconf dbus-* rtkit*
 system: inetd xinetd mdadm polkitd acpid uuidd packagekitd upowerd colord
 system: accounts-daemon rngd haveged
 
