--- a/health/health.d/postgres.conf
+++ b/health/health.d/postgres.conf
@@ -47,7 +47,7 @@ component: PostgreSQL
 
  template: postgres_db_cache_io_ratio
        on: postgres.db_cache_io_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -63,7 +63,7 @@ component: PostgreSQL
 
  template: postgres_db_transactions_rollback_ratio	
        on: postgres.db_transactions_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -77,7 +77,7 @@ component: PostgreSQL
 
  template: postgres_db_deadlocks_rate
        on: postgres.db_deadlocks_rate
-    class: Utilization
+    class: Errors
      type: Database
 component: PostgreSQL
     hosts: *
@@ -93,7 +93,7 @@ component: PostgreSQL
 
  template: postgres_table_cache_io_ratio
        on: postgres.table_cache_io_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -109,7 +109,7 @@ component: PostgreSQL
 
  template: postgres_table_index_cache_io_ratio
        on: postgres.table_index_cache_io_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -125,7 +125,7 @@ component: PostgreSQL
 
  template: postgres_table_toast_cache_io_ratio
        on: postgres.table_toast_cache_io_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -141,7 +141,7 @@ component: PostgreSQL
 
  template: postgres_table_toast_index_cache_io_ratio
        on: postgres.table_toast_index_cache_io_ratio
-    class: Utilization
+    class: Workload
      type: Database
 component: PostgreSQL
     hosts: *
@@ -157,7 +157,7 @@ component: PostgreSQL
 
  template: postgres_table_rows_dead_ratio
        on: postgres.table_rows_dead_ratio
-    class: Utilization
+    class: Errors
      type: Database
 component: PostgreSQL
     hosts: *
@@ -171,7 +171,7 @@ component: PostgreSQL
 
  template: postgres_table_bloat_size_perc
        on: postgres.table_bloat_size_perc
-    class: Utilization
+    class: Errors
      type: Database
 component: PostgreSQL
     hosts: *
@@ -214,7 +214,7 @@ component: PostgreSQL
 
  template: postgres_index_bloat_size_perc
        on: postgres.index_bloat_size_perc
-    class: Utilization
+    class: Errors
      type: Database
 component: PostgreSQL
     hosts: *
