fix last vacuum/analyze alarms

--- a/health/health.d/postgres.conf
+++ b/health/health.d/postgres.conf
@@ -179,7 +179,7 @@ component: PostgreSQL
      calc: $time
     units: seconds
     every: 1m
-     warn: $this != nan AND $this > 60 * 60 * 24 * 7
+     warn: $this != nan AND $this > (60 * 60 * 24 * 7)
      info: time elapsed since db $label:database table $label:table was vacuumed by the autovacuum daemon
        to: dba
 
@@ -192,7 +192,7 @@ component: PostgreSQL
      calc: $time
     units: seconds
     every: 1m
-     warn: $this != nan AND $this > 60 * 60 * 24 * 7
+     warn: $this != nan AND $this > (60 * 60 * 24 * 7)
      info: time elapsed since db $label:database table $label:table was analyzed by the autovacuum daemon
        to: dba
 
