put RRDSET functions to a separate file

--- a/Makefile.am
+++ b/Makefile.am
@@ -447,6 +447,7 @@ RRD_PLUGIN_FILES = \
     database/rrd.c \
     database/rrd.h \
     database/rrdset.c \
+    database/rrdset_functions.c \
     database/rrdsetvar.c \
     database/rrdsetvar.h \
     database/rrdvar.c \
