functions are now attached to the host and there is a dictionary view per chart

--- a/Makefile.am
+++ b/Makefile.am
@@ -447,7 +447,8 @@ RRD_PLUGIN_FILES = \
     database/rrd.c \
     database/rrd.h \
     database/rrdset.c \
-    database/rrdset_functions.c \
+    database/rrdfunctions.c \
+    database/rrdfunctions.h \
     database/rrdsetvar.c \
     database/rrdsetvar.h \
     database/rrdvar.c \
