--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -79,8 +79,8 @@ example_csv:
         chart_type: "line"
         chart_units: "%"
         source_format: "csv"
-        url: "https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv"
         processing_code: >
+          df = pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv', storage_options={'User-Agent': 'netdata'});
           del df['time'];
           df = df.tail(1);
           data = df.to_dict(orient='records')[0];
