--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -82,3 +82,24 @@ example_csv:
           pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv', storage_options={'User-Agent': 'netdata'});
           df.drop('time', axis=1);
           df.tail(1);
+
+github_repo_stats:
+    name: "github_repo_stats"
+    update_every: 5
+    chart_configs:
+      - chart_name: "netdata"
+        chart_title: "netdata"
+        chart_family: "repo_stats"
+        chart_context: "repo_stats"
+        chart_type: "line"
+        chart_units: "n"
+        processing_code: >
+          df = pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']];
+      - chart_name: "netdata_cloud"
+        chart_title: "netdata_cloud"
+        chart_family: "repo_stats"
+        chart_context: "repo_stats"
+        chart_type: "line"
+        chart_units: "n"
+        processing_code: >
+          df = pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata-cloud').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']];
