--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -83,6 +83,20 @@ example_csv:
           df.drop('time', axis=1);
           df.tail(1);
 
+example_json:
+    name: "example_json"
+    update_every: 5
+    chart_configs:
+      - chart_name: "london_system_net"
+        chart_title: "london_system_net"
+        chart_family: "pandas"
+        chart_context: "pandas"
+        chart_type: "area"
+        chart_units: "%"
+        processing_code: >
+          pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
+          df.drop('time', axis=1);
+
 github_repo_stats:
     name: "github_repo_stats"
     update_every: 5
