--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -70,50 +70,30 @@ update_every: 5
 
 example_csv:
     name: "example_csv"
-    update_every: 5
+    update_every: 2
     chart_configs:
       - chart_name: "london_system_cpu"
         chart_title: "london_system_cpu"
-        chart_family: "pandas"
-        chart_context: "pandas"
+        chart_family: "london_system_cpu"
+        chart_context: "london_system_cpu"
         chart_type: "line"
         chart_units: "%"
         processing_code: >
-          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv', storage_options={'User-Agent': 'netdata'});
+          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-1', storage_options={'User-Agent': 'netdata'});
           df.drop('time', axis=1);
           df.tail(1);
 
 example_json:
     name: "example_json"
-    update_every: 5
+    update_every: 2
     chart_configs:
       - chart_name: "london_system_net"
         chart_title: "london_system_net"
-        chart_family: "pandas"
-        chart_context: "pandas"
+        chart_family: "london_system_net"
+        chart_context: "london_system_net"
         chart_type: "area"
         chart_units: "%"
         processing_code: >
           pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
           df.drop('time', axis=1);
-
-github_repo_stats:
-    name: "github_repo_stats"
-    update_every: 5
-    chart_configs:
-      - chart_name: "netdata"
-        chart_title: "netdata"
-        chart_family: "repo_stats"
-        chart_context: "repo_stats"
-        chart_type: "line"
-        chart_units: "n"
-        processing_code: >
-          pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']].add_prefix('netdata_');
-      - chart_name: "netdata_cloud"
-        chart_title: "netdata_cloud"
-        chart_family: "repo_stats"
-        chart_context: "repo_stats"
-        chart_type: "line"
-        chart_units: "n"
-        processing_code: >
-          pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata-cloud').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']].add_prefix('netdata_cloud_');
+          df.tail(1);
