--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -96,4 +96,7 @@ example_json:
         processing_code: >
           pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
           df.drop('time', axis=1);
+          abs(df);
+          df.sum(axis=0).to_frame();
+          df.rename(columns={0:'total_bandwidth'});
           df.tail(1);
