--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -79,9 +79,11 @@ example_csv:
         chart_type: "line"
         chart_units: "%"
         processing_code: >
-          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-1', storage_options={'User-Agent': 'netdata'});
+          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
           df.drop('time', axis=1);
-          df.tail(1);
+          df.mean().to_frame().transpose();
+          df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
+          df.rename(columns={0:'average_user_system_ratio'});
 
 example_json:
     name: "example_json"
