--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -79,12 +79,13 @@ example_csv:
         chart_type: "line"
         chart_units: "%"
         processing_code: >
-          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
-          df.drop('time', axis=1);
-          df.mean().to_frame().transpose();
-          df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
-          df.rename(columns={0:'average_user_system_ratio'});
-          df*100;
+          df = pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
+          df = df.drop('time', axis=1);
+          df = df.mean().to_frame().transpose();
+          df = df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
+          df = df.rename(columns={0:'average_user_system_ratio'});
+          df = df*100;
+          data = df.to_dict(orient='records')[0];
 
 example_json:
     name: "example_json"
@@ -97,9 +98,10 @@ example_json:
         chart_type: "area"
         chart_units: "%"
         processing_code: >
-          pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
-          df.drop('time', axis=1);
-          abs(df);
-          df.sum(axis=0).to_frame();
-          df.rename(columns={0:'total_bandwidth'});
-          df.tail(1);
+          df = pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
+          df = df.drop('time', axis=1);
+          df = abs(df);
+          df = df.sum(axis=0).to_frame();
+          df = df.rename(columns={0:'total_bandwidth'});
+          df = df.tail(1);
+          data = df.to_dict(orient='records')[0];
