clean up and docs

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -68,6 +68,8 @@ update_every: 5
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 
+# example showing a read_csv from a url and some light pandas data wrangling.
+# pull data in csv format from london demo server and then ratio of user cpus over system cpu averaged over last 60 seconds.
 example_csv:
     name: "example_csv"
     update_every: 2
@@ -77,14 +79,17 @@ example_csv:
         chart_family: "london_system_cpu"
         chart_context: "london_system_cpu"
         chart_type: "line"
-        chart_units: "%"
-        processing_code: >
+        chart_units: "n"
+        df_steps: >
           pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv&after=-60', storage_options={'User-Agent': 'netdata'});
           df.drop('time', axis=1);
           df.mean().to_frame().transpose();
           df.apply(lambda row: (row.user / row.system), axis = 1).to_frame();
           df.rename(columns={0:'average_user_system_ratio'});
+          df*100;
 
+# example showing a read_json from a url and some light pandas data wrangling.
+# pull data in json format (using requests.get() if json data is too complex for pd.read_json() ) from london demo server and work out 'total_bandwidth'.
 example_json:
     name: "example_json"
     update_every: 2
@@ -94,10 +99,10 @@ example_json:
         chart_family: "london_system_net"
         chart_context: "london_system_net"
         chart_type: "area"
-        chart_units: "%"
-        processing_code: >
+        chart_units: "kilobits/s"
+        df_steps: >
           pd.DataFrame(requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['data'], columns=requests.get('https://london.my-netdata.io/api/v1/data?chart=system.net&format=json&after=-1').json()['labels']);
           df.drop('time', axis=1);
           abs(df);
-          df.sum(axis=0).to_frame();
+          df.sum(axis=1).to_frame();
           df.rename(columns={0:'total_bandwidth'});
